# omniagent

./: .dockerignore  .env.example  .gitignore  .prettierignore  Cargo.toml  README.md  flake.nix  install.sh  mix.exs
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  nightly.yml
apps/omniagent/: .gitignore  README.md  mix.exs
apps/omniagent/lib/: omniagent.ex
apps/omniagent/lib/omniagent/: accounts.ex  application.ex  artifacts.ex  client_commands.ex  daemons.ex  events.ex  oad_instances.ex  oad_workspaces.ex  payload.ex  release.ex  repo.ex  reviews.ex  sessions.ex  traces.ex
apps/omniagent/lib/omniagent/accounts/: api_token.ex  user.ex
apps/omniagent/lib/omniagent/artifacts/: artifact.ex
apps/omniagent/lib/omniagent/events/: session_event.ex
apps/omniagent/lib/omniagent/oad/: builder.ex  client.ex  devcontainer.ex  placement.ex  scheduler.ex  sessions.ex  snapshots.ex
apps/omniagent/lib/omniagent/oad/placement/: lease.ex
apps/omniagent/lib/omniagent/oad/snapshots/: chunk.ex  snapshot.ex
apps/omniagent/lib/omniagent/oad_instances/: oad_instance.ex
apps/omniagent/lib/omniagent/oad_workspaces/: oad_workspace.ex
apps/omniagent/lib/omniagent/reviews/: review_item.ex
apps/omniagent/lib/omniagent/sessions/: agent_session.ex
apps/omniagent/lib/omniagent/traces/: trace_span.ex
apps/omniagent/priv/repo/: seeds.exs
apps/omniagent/priv/repo/migrations/: 20260608000000_create_omniagent_server_tables.exs  20260610000000_create_artifacts.exs  20260614000000_create_oad_instances.exs  20260614000100_create_oad_workspaces.exs  20260614000200_add_oad_workspace_runtime_data.exs  20260615000000_create_oad_cas.exs  20260615000100_oad_workspace_descriptor_key.exs  20260615000200_oad_instance_scheduling.exs  20260615000300_oad_snapshot_chunk_hashes.exs
apps/omniagent/test/: test_helper.exs
apps/omniagent/test/omniagent/: client_commands_test.exs  oad_workspaces_test.exs  sessions_test.exs
apps/omniagent/test/omniagent/oad/: placement_test.exs  scheduler_test.exs  snapshots_test.exs
apps/omniagent/test/support/: data_case.ex
apps/omniagent_web/: .gitignore  README.md  mix.exs
apps/omniagent_web/assets/: package-lock.json  package.json
apps/omniagent_web/assets/css/: app.css
apps/omniagent_web/assets/js/: app.js  markdown.js
apps/omniagent_web/assets/js/hooks/: codex.js  highlight.js  prefs.js  recording.js  resize.js  terminal.js
apps/omniagent_web/assets/js/traces/: format.js  index.js  parse.js  render.js
apps/omniagent_web/lib/: omniagent_web.ex
apps/omniagent_web/lib/omniagent_web/: application.ex  auth.ex  endpoint.ex  gettext.ex  router.ex  telemetry.ex
apps/omniagent_web/lib/omniagent_web/channels/: client_channel.ex  client_socket.ex  daemon_channel.ex
apps/omniagent_web/lib/omniagent_web/components/: core_components.ex  layouts.ex
apps/omniagent_web/lib/omniagent_web/components/layouts/: root.html.heex
apps/omniagent_web/lib/omniagent_web/controllers/: artifact_controller.ex  cli_controller.ex  error_html.ex  error_json.ex  oad_controller.ex  page_controller.ex  page_html.ex  session_controller.ex  session_html.ex
apps/omniagent_web/lib/omniagent_web/controllers/page_html/: home.html.heex
apps/omniagent_web/lib/omniagent_web/controllers/session_html/: new.html.heex
apps/omniagent_web/lib/omniagent_web/live/console_live/: console_live.ex  console_live.html.heex
apps/omniagent_web/lib/omniagent_web/plugs/: api_auth.ex
apps/omniagent_web/priv/static/: install.sh
apps/omniagent_web/test/omniagent_web/channels/: client_channel_test.exs  daemon_channel_test.exs
apps/omniagent_web/test/omniagent_web/controllers/: artifact_controller_test.exs  error_html_test.exs  error_json_test.exs
apps/omniagent_web/test/omniagent_web/live/: console_live_test.exs
apps/omniagent_web/test/support/: conn_case.ex
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
crates/oad/: Cargo.toml  build.rs
crates/oad-api/: Cargo.toml
crates/oad-api/src/: lib.rs
crates/oad-cas/: Cargo.toml
crates/oad-cas/src/: lib.rs
crates/oad-cli/: Cargo.toml
crates/oad-cli/src/: client.rs  main.rs
crates/oad-client/: Cargo.toml
crates/oad-client/src/: lib.rs
crates/oad-core/: Cargo.toml
crates/oad-core/src/: lib.rs
crates/oad-oci/: Cargo.toml
crates/oad-oci/src/: lib.rs
crates/oad-runtime/: Cargo.toml
crates/oad-runtime/src/: lib.rs
crates/oad/proto/envoy/service/accesslog/v3/: als.proto
crates/oad/src/: background_exec.rs  cache.rs  cas.rs  config.rs  main.rs  network.rs  observability.rs  registration.rs  registry.rs  snapshots.rs
crates/omniagent-cli/: Cargo.toml  build.rs
crates/omniagent-cli/assets/: index.html  style.css
crates/omniagent-cli/assets/app/: compare.js  diff.js  files.js  format.js  main.js  metrics.js  modes.js  parse.js  pty.js  render.js  reviews.js  startup.js  state.js  traces.js
crates/omniagent-cli/src/: agent.rs  agent_log.rs  agents.rs  atif.rs  cast.rs  compare.rs  config.rs  control.rs  daemon.rs  files.rs  git.rs  main.rs  oad_agent.rs  protocol.rs  proxy.rs  record.rs  review.rs  service.rs  session.rs  sse.rs  upload.rs  web.rs  worker.rs  workspace.rs
crates/omniagent-cli/src/client/: conn.rs  fs_watch.rs  mod.rs  supervisor.rs
crates/omniagent-cli/src/codex/: client.rs  mod.rs  worker.rs
crates/omniagent-cli/src/executor/: action.rs  mod.rs
deploy/: .helmignore  Chart.yaml  Dockerfile.control-plane  Dockerfile.oad  values.yaml
deploy/oad/: Chart.yaml  values.yaml
deploy/oad/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  secret.yaml  service.yaml  serviceaccount.yaml  workload.yaml
deploy/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  migration-job.yaml  secret.yaml  service.yaml  serviceaccount.yaml
nix/: args.nix  devshell.nix  packages.nix  process-compose.nix  treefmt.nix
