[package]
name = "oad-cas"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
fastcdc.workspace = true
futures-util.workspace = true
hex.workspace = true
oad-core.workspace = true
reqwest.workspace = true
rusty-s3.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
zstd.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true

[lints]
workspace = true
