[package]
name = "oad-oci"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytes.workspace = true
flate2.workspace = true
futures-util.workspace = true
hex.workspace = true
libc.workspace = true
oad-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
