[package]
name = "oad"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
futures-util.workspace = true
oad-api.workspace = true
oad-core.workspace = true
oad-oci.workspace = true
oad-runtime.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
uuid.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
opentelemetry_sdk = { workspace = true, features = ["testing"] }
tempfile.workspace = true

[lints]
workspace = true
