[package]
name = "omniagent-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "omniagent"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["ws"] }
bytes.workspace = true
clap.workspace = true
futures-util.workspace = true
ignore.workspace = true
notify-debouncer-full.workspace = true
oad-api.workspace = true
oad-client.workspace = true
oad-core.workspace = true
portable-pty.workspace = true
reqwest.workspace = true
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
urlencoding.workspace = true

[lints]
workspace = true
